--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#contact" id="Contact">Contact</a></li>
             </ol>
         </navbar>
-        <a href="#">Blog</a>
+        <!-- <a href="#">Blog</a> -->
         <div class="SocialMedia">
             <a href="https://www.linkedin.com/company/srd-energy/" target="_blank"><img src="assets/images/linkedin.svg"
                     width="30px" alt="Linkedin"></a>
@@ -149,7 +149,7 @@
 
     <section id="hoWeSolve">
         <div class="HowWeSolve-Item">
-            <img src="assets/images/Charge.png" alt="Problem 1">
+            <img src="assets/images/consultant.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Consulting</h2>
                 <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/Charge.png" alt="Problem 1">
+            <img src="assets/images/feasibility.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Feasibility </h2>
                 <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
@@ -165,7 +165,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/Charge.png" alt="Problem 1">
+            <img src="assets/images/engineer.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Project engineering</h2>
                 <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
@@ -173,7 +173,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/Charge.png" alt="Problem 1">
+            <img src="assets/images/infrastructure.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Infrastructure</h2>
                 <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
@@ -333,70 +333,109 @@
         </div>
     </section>
 
-    <h1 class="allHeading">Our Partners</h1>
+
 
     <section id="sliderCompanySection">
 
+        <article id="outPartners">
 
-        <div class="slider">
-            <div class="slide-track">
-                <div class="slide">
-                    <img src="assets/images/company1.png" />
+            <h1 class="allHeading">Our Partners</h1>
+            <div class="partners-Item">
+
+                .
+                <div class="partner-Item">
+                    <img src="assets/images/zf.png" alt="">
+
                 </div>
 
-                <div class="slide">
-                    <img src="assets/images/company2.png" />
+                <div class="partner-Item">
+                    <img src="assets/images/uranusgroup.jpg" alt="">
                 </div>
 
-                <div class="slide">
-                    <img src="assets/images/company3.png" />
-                </div>
 
-                <div class="slide">
-                    <img src="assets/images/company4.png" />
+                <div class="partner-Item">
+                    <img src="assets/images/stadtwerk.png" alt="">
                 </div>
 
 
 
             </div>
-        </div>
+
+        </article>
+
+        <article class="ourAdvisors">
+            <h1 class="allHeading">Our Advisors</h1>
+
+            <div class="advisors-Item">
+
+
+                <div class="advisor-Item">
+                    <img src="assets/images/wirtschaftsfoerderung.jpg" />
+                </div>
+
+                <div class="advisor-Item">
+                    <img src="assets/images/ihk.png" />
+                </div>
+
+                <div class="advisor-Item">
+                    <img src="assets/images/VentureLeaders.jpg" />
+                </div>
+
+                <div class="advisor-Item">
+                    <img src="assets/images/h2ub.png" />
+                </div>
+
+            </div>
+
+        </article>
+
+        <article id="sdgGoals">
+
+            <h1 class="allHeading">Our SDG Goals</h1>
+
+            <div class="sgdGoal">
+
+
+                <div class="sgdGoal-Item1">
+                    <img src="assets/images/yellow.png" alt="">
+                    <div class="Sdg-Text">
+                        <p>Low Cost hydrogen generator and
+                            fuel cells for SMES</p>
+                    </div>
+                </div>
+
+                <div class="sgdGoal-Item2">
+                    <img src="assets/images/red.png" alt="">
+                    <div class="adviser-Text">
+                        <p>Helps local SMEst transition to
+                            Green energy systems</p>
+                    </div>
+                </div>
+
+                <div class="sgdGoal-Item3">
+                    <img src="assets/images/orange.png" alt="">
+                    <div class="adviser-Text">
+                        <p>Support UNFCCC-certiified climate friendly projects</p>
+                    </div>
+                </div>
+                <div class="sgdGoal-Item4">
+                    <img src="assets/images/green.png" alt="">
+                    <div class="adviser-Text">
+                        <p>Support UNFCCC-certiified climate friendly projects</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+        </article>
 
     </section>
 
-    <h1 class="allHeading">Our SDG Goals</h1>
 
-    <section id="sdgGoals">
 
-        <div class="Sdg-Item1">
-            <div class="Sdg-Item">
-                <img src="assets/images/yellow.png" alt="">
-                <div class="Sdg-Text">
-                    <p>Low Cost hydrogen generator and
-                        fuel cells for SMES</p>
-                </div>
-            </div>
-
-            <div class="Sdg-Item">
-                <img src="assets/images/red.png" alt="">
-                <div class="Sdg-Text">
-                    <p>Helps local SMEst transition to
-                        Green energy systems</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="Sdg-Item2">
-
-            <div class="Sdg-Item">
-                <img src="assets/images/green.png" alt="">
-                <div class="Sdg-Text">
-                    <p>Support UNFCCC-certiified climate friendly projects</p>
-                </div>
-            </div>
-
-        </div>
-
-    </section>
 
     <h1 class="allHeading">Our Team</h1>
 
@@ -406,7 +445,7 @@
             <div class="Team-Item">
                 <img src="assets/images/avatar1.png" alt="Team Member">
                 <h3>Andy DEMIR</h3>
-                <p>Co-Founder & Sales</p>
+                <p>Founder & Sales</p>
 
             </div>
 
@@ -429,7 +468,7 @@
             </div>
 
             <div class="Team-Item">
-                <img src="assets/images/avatar5.png" alt="Team Member">
+                <img src="assets/images/avatar5.jpg" alt="Team Member">
                 <h3> Berk UCAR</h3>
                 <p>Frontend Developer</p>
             </div>
@@ -447,31 +486,31 @@
         <h1 class="allHeading">Milestones</h1>
         <ul>
             <li style="--accent-color:#41516C">
-                <div class="date">2002</div>
+                <div class="date">2023</div>
                 <div class="title">Title 1</div>
                 <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam
                     fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
             </li>
-            <li style="--accent-color:#FBCA3E">
-                <div class="date">2007</div>
+            <li style="--accent-color:#1B5F8C">
+                <div class="date">2024</div>
                 <div class="title">Title 2</div>
                 <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum
                     vero nihil veniam.</div>
             </li>
-            <li style="--accent-color:#E24A68">
-                <div class="date">2012</div>
+            <li style="--accent-color:#41516C">
+                <div class="date">2025</div>
                 <div class="title">Title 3</div>
                 <div class="descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima consequuntur
                     soluta placeat iure totam commodi repellendus ea delectus, libero fugit quod reprehenderit, sequi
                     quo, et dolorum saepe nulla hic.</div>
             </li>
             <li style="--accent-color:#1B5F8C">
-                <div class="date">2017</div>
+                <div class="date">2026</div>
                 <div class="title">Title 4</div>
                 <div class="descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, cumque.</div>
             </li>
-            <li style="--accent-color:#4CADAD">
-                <div class="date">2022</div>
+            <li style="--accent-color:#41516C">
+                <div class="date">2027</div>
                 <div class="title">Title 5</div>
                 <div class="descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non.</div>
             </li>
