--- a/index.html
+++ b/index.html
@@ -74,18 +74,19 @@
 
     <section id="Introduction">
         <h1></h1>
-        <div class="Intoduction-Img">
+        <!-- <div class="Intoduction-Img">
             <img src="assets/images/Yatch.png" alt="Charger">
-        </div>
+        </div> -->
 
         <div class="Introduction-Text">
             <h2>High Powered Ultra Fast Chargers<br> for Electric Boats & Yachts</h2>
             <p>SRD Energy Technologies is a leading provider of hydrogen-powered electric vehicle charging stations.
                 <br>
-                Our
-                comprehensive range caters to diverse needs, spanning residential, non-residential, and industrial <br>
-                applications
-                for passenger cars, trucks, buses, and industrial vehicles.
+                At SRD Energy Tech, we are committed to driving the transition towards a sustainable and electrified
+                maritime industry. <br> Our mission is to provide innovative and reliable charging infrastructure
+                solutions
+                that empower boat owners, <br> marinas, and ports to embrace clean energy and reduce their environmental
+                impact.
             </p>
         </div>
 
@@ -100,75 +101,101 @@
         <div class="AboutTextF">
         </div>
         <div class="AboutText">
-            <h2>Who We Are</h2>
+            <h2>Our Mission</h2>
             <p>Welcome to SRD Energy Technologies!</p>
-            <p>We specialize in the design and manufacturing of hydrogen-powered electric vehicle charging stations.
+            <p> At SRD Energy Tech, we are committed to driving the transition towards a sustainable and electrified
+                maritime industry. Our mission is to provide innovative and reliable charging infrastructure solutions
+                that empower boat owners, marinas, and ports to embrace clean energy and reduce their environmental
+                impact.
             </p>
-            <p>Our comprehensive range caters to diverse needs, spanning residential, non-residential, and industrial
-                applications for passenger cars, trucks, buses, and industrial vehicles.</p>
+
+            </p>
         </div>
     </section>
 
-    <h1 class="allHeading">Why Electric charging for Marina</h1>
+    <h1 class="allHeading">Why Electric Charging for Maritime in Europe? Why Now?</h1>
+    <p id="Paragraph">The European maritime sector is undergoing a significant transformation, <br> driven by
+        stringent environmental
+        regulations and a growing awareness of the need for sustainable practices. <br> Electric propulsion systems
+        offer a
+        cleaner, quieter, and more efficient alternative to traditional fossil fuel-powered <br> vessels. Investing in
+        electric charging infrastructure now positions you as a leader in the industry, <br> attracting eco-conscious
+        boat
+        owners and contributing to a healthier marine environment.
+    </p>
 
     <section id="why">
+
         <div class="WhyUsItem" id="EuPhoto">
             <img src="assets/images/eyu.png" alt="">
             <div class="WhyUsText">
-                <h2>The 60 KM Rule</h2>
-                <p> Fast-charging stations
-                    every 60 km by end 2025. </p>
+                <h2>Limited Charging Capacity</h2>
+                <p> Our high-power charging stations can accommodate a variety of vessel sizes and charging needs,
+                    ensuring efficient and timely charging.
+                </p>
             </div>
         </div>
+        
         <div class="WhyUsItem">
             <img src="assets/images/bar.png" alt="">
             <div class="WhyUsText">
-                <h2>asd</h2>
-                <p>asdasd</p>
+                <h2>Infrastructure Constraints</h2>
+                <p>Our modular design allows for easy installation and integration into existing port infrastructure,
+                    minimizing disruption and costs.
+                </p>
             </div>
         </div>
+
         <div class="WhyUsItem">
             <img src="assets/images/3m.png" alt="">
             <div class="WhyUsText">
-                <h2>asd</h2>
-                <p>asdasd</p>
+                <h2>Interoperability</h2>
+                <p>Our stations are compatible with a wide range of electric vessels, ensuring seamless charging
+                    experiences for boat owners.
+                </p>
             </div>
         </div>
     </section>
 
     <section id="problems">
-        <h1 class="allHeading">Which Problems We Can Help </h1>
+        <h1 class="allHeading">Why SRD Energy Tech? </h1>
         <div class="Problem">
             <div class="Problem-Item">
                 <img src="assets/images/Charge.png" alt="Problem 1">
                 <div class="Problem-Text">
-                    <h3>Energy Demand</h3>
-                    <p>Escalating energy demand of electric car charging stations</p>
+                    <h3>Comprehensive Services</h3>
+                    <p>We offer a comprehensive range of services, from initial consultation and design to installation,
+                        maintenance, and ongoing support.
+                    </p>
                 </div>
             </div>
             <div class="Problem-Item">
                 <img src="assets/images/Electric.png" alt="Problem 1">
                 <div class="Problem-Text">
-                    <h3>Insufficent Power Grids</h3>
-                    <p>Conventional charging infrastructure strains existing power grids, leading to overburdened
-                        systems and potential shortages</p>
+                    <h3>Cutting-Edge Technology</h3>
+                    <p>Our charging stations incorporate the latest advancements in charging technology, delivering high
+                        efficiency, speed, and reliability.
+                    </p>
                 </div>
             </div>
             <div class="Problem-Item">
                 <img src="assets/images/climate.png" alt="Problem 1">
                 <div class="Problem-Text">
-                    <h3>The Climate Change</h3>
-                    <p>Impedes the widespread deployment of electric vehicles
-                        Environmental concerns due to the reliance on non-renewable energy source
+                    <h3>Net-Zero Commitment</h3>
+                    <p> We are committed to providing sustainable solutions that contribute to a net-zero future for the
+                        maritime industry.
+
                     </p>
                 </div>
             </div>
             <div class="Problem-Item">
                 <img src="assets/images/ChargeDemand.png" alt="Problem 1">
                 <div class="Problem-Text">
-                    <h3>Rapid Charge Demand</h3>
-                    <p>The EV Rapid Charger provide longer travel distances without long wait recharge brakes. You can
-                        recharge your vehicle in around 20 minutes (only limited by the vehicle charge capability)</p>
+                    <h3>Customer Focus</h3>
+                    <p> Our team of experts is dedicated to understanding your specific needs and providing tailored
+                        solutions to meet your goals.
+
+                    </p>
                 </div>
             </div>
         </div>
@@ -179,33 +206,37 @@
         <div class="HowWeSolve-Item">
             <img src="assets/images/consultant.png" alt="Problem 1">
             <div class="HowWeSolvetext">
-                <h2>Consulting</h2>
-                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                    you provide.</p>
+                <h2>High-Speed Charging</h2>
+                <p>Our stations deliver rapid charging capabilities, minimizing downtime and maximizing vessel usage.
+                </p>
             </div>
         </div>
         <div class="HowWeSolve-Item">
             <img src="assets/images/feasibility.png" alt="Problem 1">
             <div class="HowWeSolvetext">
-                <h2>Feasibility </h2>
-                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                    you provide.</p>
+                <h2>Efficiency </h2>
+                <p> Our advanced technology ensures optimal energy utilization, reducing operating costs and
+                    environmental impact.
+                </p>
             </div>
         </div>
         <div class="HowWeSolve-Item">
             <img src="assets/images/engineer.png" alt="Problem 1">
             <div class="HowWeSolvetext">
-                <h2>Project engineering</h2>
-                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                    you provide.</p>
+                <h2>Reliability</h2>
+                <p> Our stations are built to withstand harsh marine environments and provide reliable performance over
+                    the long term.
+                </p>
             </div>
         </div>
         <div class="HowWeSolve-Item">
             <img src="assets/images/infrastructure.png" alt="Problem 1">
             <div class="HowWeSolvetext">
-                <h2>Infrastructure</h2>
-                <p>We prepare our product options that suit your purpose and needs in line with the brief and needs
-                    you provide.</p>
+                <h2>Maintenance Efficiency</h2>
+                <p>Our streamlined maintenance procedures and remote monitoring capabilities minimize downtime and
+                    ensure optimal station performance.
+
+                </p>
             </div>
         </div>
     </section>
@@ -213,6 +244,7 @@
     <h1 class="allHeading">Our Solution</h1>
 
     <section id="ourSolition">
+
         <img src="assets/images/About.png" alt="Image">
         <div class="Solitions">
             <div class="Solitions-Item">
@@ -307,7 +339,7 @@
         </div>
     </section>
 
-    <h1 class="allHeading">Our Customer Base</h1>
+    <h1 class="allHeading">Our Potential Customer</h1>
 
 
     <section class="carousel-section">
@@ -317,23 +349,23 @@
             <div class="card-carousel">
                 <div class="card" id="1">
                     <div class="image-container"></div>
-                    <p>1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+                    <p>Marinas and Yacht Clubs</p>
                 </div>
                 <div class="card" id="2">
                     <div class="image-container"></div>
-                    <p>2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+                    <p>Commercial Shipping Companies</p>
                 </div>
                 <div class="card" id="3">
                     <div class="image-container"></div>
-                    <p>3 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+                    <p>Government Agencies</p>
                 </div>
                 <div class="card" id="4">
                     <div class="image-container"></div>
-                    <p>4 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+                    <p>Private Vessel Owners</p>
                 </div>
                 <div class="card" id="5">
                     <div class="image-container"></div>
-                    <p>5 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, explicabo!</p>
+                    <p>Lorem, ipsum dolor.</p>
                 </div>
             </div>
             <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
@@ -406,29 +438,35 @@
                 <div class="sgdGoal-Item1">
                     <img src="assets/images/yellow.png" alt="">
                     <div class="Sdg-Text">
-                        <p>Low Cost hydrogen generator and
-                            fuel cells for SMES</p>
+                        <p>By providing clean and efficient charging infrastructure, we promote the transition to
+                            renewable energy sources.
+                        </p>
                     </div>
                 </div>
 
                 <div class="sgdGoal-Item2">
                     <img src="assets/images/red.png" alt="">
                     <div class="adviser-Text">
-                        <p>Helps local SMEst transition to
-                            Green energy systems</p>
+                        <p>Our innovative charging solutions support the development of sustainable infrastructure and
+                            promote technological advancements.
+                        </p>
                     </div>
                 </div>
 
                 <div class="sgdGoal-Item3">
                     <img src="assets/images/orange.png" alt="">
                     <div class="adviser-Text">
-                        <p>Support UNFCCC-certiified climate friendly projects</p>
+                        <p> Our solutions support the conservation of marine ecosystems by reducing pollution and
+                            promoting sustainable practices.
+                        </p>
                     </div>
                 </div>
                 <div class="sgdGoal-Item4">
                     <img src="assets/images/green.png" alt="">
                     <div class="adviser-Text">
-                        <p>Support UNFCCC-certiified climate friendly projects</p>
+                        <p>By reducing emissions from maritime operations, we contribute to mitigating climate change
+                            and protecting our planet.
+                        </p>
                     </div>
                 </div>
 
@@ -441,7 +479,12 @@
 
     </section>
 
-    <h1 class="allHeading">Our Team</h1>
+    <h1 class="allHeading">Meet Our Team</h1>
+    <p id="Paragraph">Our team of dedicated professionals brings a wealth of experience in the maritime industry, <br>
+        electrical
+        engineering, and renewable energy. With a passion for innovation and a commitment to sustainability,<br> we are
+        driving the future of maritime electrification.
+    </p>
 
     <section id="ourTeam">
         <div class="Team">
