--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <title>SRD Energy</title>
+    <title>SRD Energy Technologies</title>
     <link rel="stylesheet" href="assets/css/SRD.css">
     <script src="assets/js/SRD.js" defer></script>
     <link rel="icon" href="assets/images/Favicon.png" type="image/x-icon">
@@ -49,6 +49,7 @@
     <nav>
         <div class="Logo">
             <h1>SRD</h1>
+            <h3>Energy Technologies</h3>
         </div>
         <Navbar>
             <ol>
@@ -135,7 +136,7 @@
                 </p>
             </div>
         </div>
-        
+
         <div class="WhyUsItem">
             <img src="assets/images/bar.png" alt="">
             <div class="WhyUsText">
