--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="Hero" id="Home"></div>
     </header>
 
-    <section id="Introduction">
+    <section id="Introduction" class="hidden">
         <h1></h1>
         <!-- <div class="Intoduction-Img">
             <img src="assets/images/Yatch.png" alt="Charger">
@@ -94,7 +94,7 @@
 
     </section>
 
-    <section id="about">
+    <section id="about" class="hidden">
 
         <div class="AboutImg">
             <img src="assets/images/About.png" alt="About Us">
@@ -114,7 +114,7 @@
         </div>
     </section>
 
-    <h1 class="allHeading">Why Electric Charging for Maritime in Europe? Why Now?</h1>
+    <h1 class="allHeading hidden">Why Electric Charging for Maritime in Europe? Why Now?</h1>
     <p id="Paragraph">The European maritime sector is undergoing a significant transformation, <br> driven by
         stringent environmental
         regulations and a growing awareness of the need for sustainable practices. <br> Electric propulsion systems
@@ -125,7 +125,7 @@
         owners and contributing to a healthier marine environment.
     </p>
 
-    <section id="why">
+    <section id="why" class="hidden">
 
         <div class="WhyUsItem" id="EuPhoto">
             <img src="assets/images/eyu.png" alt="">
@@ -158,7 +158,7 @@
         </div>
     </section>
 
-    <section id="problems">
+    <section id="problems" class="hidden">
         <h1 class="allHeading">Why SRD Energy Tech? </h1>
         <div class="Problem">
             <div class="Problem-Item">
@@ -203,7 +203,7 @@
     </section>
 
 
-    <section id="hoWeSolve">
+    <section id="hoWeSolve" class="hidden">
         <div class="HowWeSolve-Item">
             <img src="assets/images/consultant.png" alt="Problem 1">
             <div class="HowWeSolvetext">
@@ -244,7 +244,7 @@
 
     <h1 class="allHeading">Our Solution</h1>
 
-    <section id="ourSolition">
+    <section id="ourSolition" class="hidden">
 
         <img src="assets/images/About.png" alt="Image">
         <div class="Solitions">
@@ -274,7 +274,7 @@
 
     <h1 class="allHeading">Why Charging Stations</h1>
 
-    <section id="whyCharging">
+    <section id="whyCharging" class="hidden">
         <div class="WhyCharging-Item">
             <div class="WhyCharging-Img">
                 <img src="assets/images/fastcharging.png" alt="Problem 1">
@@ -343,7 +343,7 @@
     <h1 class="allHeading">Our Potential Customer</h1>
 
 
-    <section class="carousel-section">
+    <section class="carousel-section" class="hidden">
 
 
         <div class="contactContainer">
@@ -375,7 +375,7 @@
     </section>
 
 
-    <section id="sliderCompanySection">
+    <section id="sliderCompanySection" class="hidden">
 
         <article id="outPartners">
 
@@ -487,7 +487,7 @@
         driving the future of maritime electrification.
     </p>
 
-    <section id="ourTeam">
+    <section id="ourTeam" class="hidden">
         <div class="Team">
 
             <div class="Team-Item">
@@ -528,9 +528,12 @@
             </div>
 
         </div>
+
     </section>
 
-    <section id="milestones" class="Milestones">
+
+
+    <section id="milestones" class="Milestones hidden">
         <h1 class="allHeading">Milestones</h1>
         <ul>
             <li style="--accent-color:#41516C">
@@ -567,7 +570,7 @@
 
     </section>
 
-    <section id="contact">
+    <section id="contact" class="hidden">
 
         <div class="contactContainer d-flex justify-content-center align-items-center">
 
