--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
     <section id="hoWeSolve" class="hidden">
         <div class="HowWeSolve-Item">
-            <img src="assets/images/consultant.png" alt="Problem 1">
+            <img src="assets/images/fast.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>High-Speed Charging</h2>
                 <p>Our stations deliver rapid charging capabilities, minimizing downtime and maximizing vessel usage.
@@ -213,7 +213,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/feasibility.png" alt="Problem 1">
+            <img src="assets/images/efficiency.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Efficiency </h2>
                 <p> Our advanced technology ensures optimal energy utilization, reducing operating costs and
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/engineer.png" alt="Problem 1">
+            <img src="assets/images/reliability.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Reliability</h2>
                 <p> Our stations are built to withstand harsh marine environments and provide reliable performance over
@@ -231,7 +231,7 @@
             </div>
         </div>
         <div class="HowWeSolve-Item">
-            <img src="assets/images/infrastructure.png" alt="Problem 1">
+            <img src="assets/images/maintenance.png" alt="Problem 1">
             <div class="HowWeSolvetext">
                 <h2>Maintenance Efficiency</h2>
                 <p>Our streamlined maintenance procedures and remote monitoring capabilities minimize downtime and
@@ -343,7 +343,7 @@
     <h1 class="allHeading">Our Potential Customer</h1>
 
 
-    <section class="carousel-section" class="hidden">
+    <section class="carousel-section hidden">
 
 
         <div class="contactContainer">
