--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     <section class="carousel-section hidden">
 
 
-        <div class="contactContainer">
+        <div class="carousel-Container">
             <div class="card-carousel">
                 <div class="card" id="1">
                     <div class="image-container"></div>
@@ -1044,7 +1044,7 @@
 
                 <div class="form-group message">
                     <textarea id="formMessage" autocomplete="off" class="form-control form-control-lg" rows="7"
-                        placeholder="Mensagem"></textarea>
+                        placeholder="Message"></textarea>
                 </div>
 
                 <div class="text-center">
